--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,5 +18,5 @@ jobs:
     - name: Build project
       run: npm run build
 
-    - name: Start Next.js server
-      run: npm run start
+    - name: Start React.js server
+      run: npm run dev
