--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest",
-    "start": "vite preview"
+    "start": "vite preview --host 0.0.0.0 --port 4173"
   },
   "dependencies": {
     "@headlessui/react": "^2.1.8",
