--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,9 +19,9 @@ jobs:
       run: npm run build
 
     - name: Start Vite server in production mode
-      shell: pwsh
+      shell: cmd
       run: |
-        Start-Job -ScriptBlock { npm run start }
-        Start-Sleep -Seconds 5
+        start /B npm run start
+        timeout /t 5
 
       # run: npm run start &    para linux
