--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Start Vite server in production mode
       shell: powershell
       run: |
-        start /B cmd /c "npm run preview -- --port 3000"
-        timeout /t 5
+        Start-Job -ScriptBlock { cmd /c "npm run preview -- --port 3000" }
+        Start-Sleep -Seconds 5
 
       # run: npm run start &    para linux
